--- a/src/app/Blog/[id]/Blog.scss
+++ b/src/app/Blog/[id]/Blog.scss
@@ -31,6 +31,24 @@
         padding: 1.5rem 0 1rem 0;
       }
 
+      & > h4 {
+        font-size: 1.2rem;
+        font-weight: 700;
+        padding: 1rem 0 0.5rem 0;
+      }
+
+      & > h5 {
+        font-size: 1.1rem;
+        font-weight: 700;
+        padding: 0.5rem 0 0.25rem 0;
+      }
+
+      & > h6 {
+        font-size: 1rem;
+        font-weight: 700;
+        padding: 0.25rem 0 0.125rem 0;
+      }
+
       & > ul {
         list-style-type: disc;
         padding-left: 2rem;
