--- a/src/app/Blog/Blogs.scss
+++ b/src/app/Blog/Blogs.scss
@@ -1,13 +1,13 @@
-.blog_post {
+.blogs_post {
   &--header {
     &__title {
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
   }
 
   &--content {
     &__body {
-      font-size: 1.25rem;
+      font-size: 1rem;
     }
   }
 }
