--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -74,7 +74,7 @@
     @apply bg-background text-foreground;
   }
   main {
-    @apply p-4;
+    // @apply p-4;
   }
   pre {
     @apply whitespace-pre-wrap rounded-lg bg-charcoal p-4 text-white;
