Fixed bug where new post button redirected authorized users to home page

--- a/src/app/Layout.scss
+++ b/src/app/Layout.scss
@@ -2,7 +2,7 @@
   min-height: 100dvh;
   &__main {
     &--inner {
-      height: calc(100dvh - 10rem);
+      @apply h-[calc(100dvh-10rem)] md:h-[calc(100dvh-6rem)];
     }
   }
 }
