--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -141,10 +141,10 @@
   }
 
   & > pre {
-    @apply my-4 whitespace-pre-wrap rounded-lg bg-charcoal p-4 text-white;
+    @apply my-4 overflow-x-auto whitespace-pre-wrap rounded-lg bg-charcoal p-4 text-white;
 
     & > code {
-      @apply block whitespace-pre-wrap;
+      @apply text-xs;
     }
   }
 }
