--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -148,3 +148,27 @@
     }
   }
 }
+
+.markdown-preview {
+  position: relative; /* Ensure a positioning context for absolute children */
+
+  & > p:first-of-type {
+    position: relative; /* Needed to contain the absolute ::after within the p tag */
+    @apply pb-4; /* Keep your padding if needed for spacing */
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 8rem; /* Adjust height based on the desired fade effect */
+      background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0),
+        rgba(255, 255, 255, 1)
+      );
+    }
+  }
+}
